  by Steve Simpson.  See issue #12.

* `term_count` did not handle hierarchical `term.list` correctly do=ue to a
  reordering done by **data.table** (when `group.vars` not `= TRUE`).  This
  has been corrected.

* Column ordering was not respected by `print.term_count`.

NEW FEATURES

* `important_terms` added to compliment `frequent_terms` allowing tf-idf
  weighted terms to rise to the top.

MINOR FEATURES

IMPROVEMENTS

CHANGES


termco 0.2.0
----------------------------------------------------------------

NEW FEATURES

* `validate_model` and `assign_validation_task` added to allow for human
  assessment of how accurate a model is functioning.

CHANGES

* `probe_colo_list`,`probe_colo_plot_list`, & `probe_colo_plot` all use
  `search_term_collocations` under the hood rather than `search_term` + `
  frequent_terms`.


termco 0.1.0
----------------------------------------------------------------

BUG FIXES

* `plot.term_count` did not properly handle weighting.  This has been fixed and
  allows for `"count"` as a choice.

* `search_term_which` (also `search_term`) did not treat te `and` argument
  correctly.  `and` was treated identical to the `not` argument.

NEW FEATURES

* `split_data` added for easy creation of training and testing data.

* `classification_project` added to make a classification modeling project
  template.

* `plot_cum_percent` added for cumulative percent plot of frequent terms.

* `probe_` family of functions added to easily make lists of function calls for
  exploration of the frequent terms in the context of the data.  Functions include:
  `probe_list`, `probe_colo_list`, `probe_colo_plot_list`, & `probe_colo_plot`.

* `hierarchical_coverage` added to allow exploration of the unique coverage of a
  text vector by a term after partitioning out the elements matched by previous
  terms.

* `tag_co_occurrence` added to explore tag co-occurrences.

* `search_term_collocations`   added as a conveinence wrapper for `search_term`