@@ -37,6 +37,7 @@ export(as_terms)
 export(assign_validation_task)
 export(classification_project)
 export(classify)
+export(collapse_tags)
 export(colo)
 export(coverage)
 export(frequent_terms)
