@@ -6,11 +6,11 @@ citEntry(entry = "manual",
     author = "Tyler W. Rinker",
     organization = "University at Buffalo/SUNY",
     address = "Buffalo, New York",
-    note = "version 0.3.2",
+    note = "version 0.3.3",
     year = "2016",
     url = "http://github.com/trinker/termco",
     textVersion  = paste("Rinker, T. W. (2016).",
         "termco: Tools to count terms and substrings in strings",
-        "version 0.3.2. University at Buffalo. Buffalo, New York.",
+        "version 0.3.3. University at Buffalo. Buffalo, New York.",
         "http://github.com/trinker/termco")
 )
